--- a/test.html
+++ b/test.html
@@ -1,4 +1,14 @@
-<h1>Hey. I'm dumb and broke</h1>
-<p>Hey. I'm a broke <b> paragraph</b> element. Cool huh?
-<a href="https://youtube.com" target="_blank" title="Let's die together">Click me! I'm broke and poor!</a>
-<img src="https://i.kym-cdn.com/entries/icons/original/000/026/489/crying.jpg">
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test Page</title>
+</head>
+<body>
+	<h1>Hey. I'm dumb and broke</h1>
+	<p>Hey. I'm a broke <b> paragraph</b> element. Cool huh?
+	<a href="https://youtube.com" target="_blank" title="Let's die together">Click me! I'm broke and poor!</a>
+	<p>My name is:<br>
+	Broken and Damaged</p>
+	<img src="https://i.kym-cdn.com/entries/icons/original/000/026/489/crying.jpg">
+</body>
+</html>
