Added "weak" to the heading

--- a/test.html
+++ b/test.html
@@ -4,7 +4,8 @@
 	<title>Test Page</title>
 </head>
 <body>
-<h1>Hey. I'm dumb and broke</h1>
+<h1>Hey. I'm dumb and broke. Look at me waaaaa</h1>
+<h1>Hey. I'm weepers. Look at me weak</h1>
 	<p>Hey. I'm a broke <b> paragraph</b> element. Cool huh?
 	<a href="https://youtube.com" target="_blank" title="Let's die together">Click me! I'm broke and poor!</a>
 	<p>My name is:<br>
