--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<title>Spider Man</title>
-	<link rel="icon" href="https://vignette.wikia.nocookie.net/marvelcinematicuniverse/images/b/b0/Spider-Man_FFH_Profile.jpg/revision/latest?cb=20190917181733">
+	<link rel="icon" href="img/spiderman-profile.jpg">
+	<link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
 	<header>
-		<img src="https://vignette.wikia.nocookie.net/marvelcinematicuniverse/images/b/b0/Spider-Man_FFH_Profile.jpg/revision/latest?cb=20190917181733">
+		<img src="img/spiderman-profile.jpg">
 		<h1>Spider Man</h1>
 	</header>
 
@@ -15,8 +17,8 @@
 	<main>
 		<h2>About Spider Man</h2>
 		<p>When bitten by a genetically modified spider, a nerdy, shy, and awkward high school student gains spider-like abilities that he eventually must use to fight evil as a superhero after tragedy befalls his family. Based on Marvel Comics' superhero character, this is a story of Peter Parker who is a nerdy high-schooler.</p>
-		<img src="https://images.hdqwalls.com/download/venom-spiderman-fight-4w-2560x1440.jpg">
-		<p>Spider Man fighting Venom</p>
+		<img src="img/spiderman.jpg">
+		<p>This is Spider Man web-slinging around New York City</p>
 
 		<!-- Characteristics -->
 		<h2>Characteristics</h2>
@@ -45,7 +47,7 @@
 
 	<!-- Footer element -->
 	<footer>
-		<p>This website was created during a skillshare class.
+		<p>This site was created during a TapTapKaboom class.
 		&copy; A.J.</p>
 	</footer>
 </body>
