wrote the css for our character's website and changed the and changed some HTML

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<h2>About Spider Man</h2>
 		<p>When bitten by a genetically modified spider, a nerdy, shy, and awkward high school student gains spider-like abilities that he eventually must use to fight evil as a superhero after tragedy befalls his family. Based on Marvel Comics' superhero character, this is a story of Peter Parker who is a nerdy high-schooler.</p>
 		<img src="img/spiderman.jpg">
-		<p>This is Spider Man web-slinging around New York City</p>
+		<p class="caption">This is Spider Man web-slinging around New York City</p>
 
 		<!-- Characteristics -->
 		<h2>Characteristics</h2>
@@ -30,7 +30,7 @@
 			<li>Utilizes wrist web-shooters to shoot spiderweb material.</li>
 		</ol>
 		<h2>Spider Man's Friends</h2>
-		<p>Spider Man's has many Friends but his best friend would be Tony Stark aka Iron Man. CLick on the links below to learn more about
+		<p>Spider Man's has many Friends but his best friend would be Tony Stark aka Iron Man. Click on the links below to learn more about
 		them.</p>
 		<ul>
 
